--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
 </head>
 <body>
     
-    <header class="head">
+    <header class="header">
 
         <div class="logo">
-
+            <img class="logo-png" src="https://th.bing.com/th/id/R.2ea85d7448475a744c1485c2eac3d3d1?rik=LOSTtarBPEnY%2fw&riu=http%3a%2f%2fwww.freepnglogos.com%2fuploads%2fnetflix-logo-0.png&ehk=PaZLUHaWmwAMEzdIDx7zGpBu053ZpXipTljxBidJnfU%3d&risl=&pid=ImgRaw&r=0" alt="netflix logo">
         </div>
 
-        <div class="search-box">
-            
+        <div class="search">
+
+            <div class="search-bar">
+
+                <input type="text" class="text-box">
+                <img class="search-icon" src="https://th.bing.com/th/id/R.11aac9c1f6fe373171cb05d99f8a9a08?rik=0s2xll77abHQSQ&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_176563.png&ehk=LBggy%2frXkomPPhWq39S4339%2bZgz%2fRJ10%2bpzyO8XEFYE%3d&risl=&pid=ImgRaw&r=0" alt="search bar icon">
+            </div>
+
         </div>
 
     </header>
