--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
 
             <div class="search-bar">
 
-                <input type="text" placeholder="Search Movie" class="text-box">
-                <img class="search-icon" src="https://th.bing.com/th/id/R.11aac9c1f6fe373171cb05d99f8a9a08?rik=0s2xll77abHQSQ&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_176563.png&ehk=LBggy%2frXkomPPhWq39S4339%2bZgz%2fRJ10%2bpzyO8XEFYE%3d&risl=&pid=ImgRaw&r=0" alt="search bar icon">
+                <input type="text" onkeyup="searchMovie()" id="search" placeholder="Search Movie" class="text-box">
+                <img onclick="searchMovie()" class="search-icon" src="https://th.bing.com/th/id/R.11aac9c1f6fe373171cb05d99f8a9a08?rik=0s2xll77abHQSQ&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_176563.png&ehk=LBggy%2frXkomPPhWq39S4339%2bZgz%2fRJ10%2bpzyO8XEFYE%3d&risl=&pid=ImgRaw&r=0" alt="search bar icon">
             </div>
 
         </div>
 
     </header>
+
+    <div class="movies">
+        
+    </div>
 
     <script src="./script.js"></script>
 </body>
