--- a/index.html
+++ b/index.html
@@ -26,9 +26,27 @@
 
     </header>
 
-    <div class="movies">
-        
-    </div>
+    <section class="movies">
+
+        <div class="movie">
+            <div class="overlay">
+
+                <div class="video">
+
+                </div>
+
+                <div class="details">
+                    <h1>Wrong Turn 6</h1>
+                    <h2>IMDB : 6.8</h2>
+                    <p>Anthony Ilott . Aqueela Zoll . Chris Jarvis </p>
+                </div>
+
+            </div>
+
+            <img class="poster" src="https://upload.wikimedia.org/wikipedia/en/thumb/3/32/WrongTurn6LastResortPoster.jpg/220px-WrongTurn6LastResortPoster.jpg" alt="Wrong turn poster">
+        </div>
+
+    </section>
 
     <script src="./script.js"></script>
 </body>
