Added multiple movies

--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
 
     </header>
 
-    <section class="movies">
+    <section class="movies" id="movies">
 
-        <div class="movie">
+        <!-- <div class="movie">
             <div class="overlay">
 
                 <div class="video">
 
                 </div>
 
-                <div class="details">
-                    <h1>Wrong Turn 6</h1>
-                    <h2>IMDB : 6.8</h2>
-                    <p>Anthony Ilott . Aqueela Zoll . Chris Jarvis </p>
+                    <div class="details">
+                        <h1>Wrong Turn 6</h1>
+                        <h2>IMDB : 6.8</h2>
+                        <p>Anthony Ilott . Aqueela Zoll . Chris Jarvis </p>
+                    </div>
+
                 </div>
 
-            </div>
-
             <img class="poster" src="https://upload.wikimedia.org/wikipedia/en/thumb/3/32/WrongTurn6LastResortPoster.jpg/220px-WrongTurn6LastResortPoster.jpg" alt="Wrong turn poster">
-        </div>
+        </div> -->
 
     </section>
 
